@@ -29,6 +29,7 @@ HOW TO UPDATE?
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.7.x
 
 New Commands:
+- get_drawing_mouse_pos: can now retrieve mouse pos over a drawing #507
 - add_vline_series: can now add infinite vertical lines to a plot #541
 - add_hline_series: can now add infinite horizontal lines to a plot #541
 
